dirty fix for safari layout bug for column 100% width img

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -141,7 +141,7 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
 	// Cover within a colored block
 	& .wp-block-cover {
 		margin: -2rem -2rem 2rem -2rem;
-		width: calc( 100% + 4rem);
+		width: calc( 101% + 4rem);
 		min-height: 250px;
 	}
 
